# mysqlpg

./: .gitignore  README.md  install.sh  pyproject.toml
mysqlpg/: __init__.py  __main__.py  cli.py  commands.py  connection.py  ddl.py  dumpcli.py  formatter.py  interactive.py  migrate.py  translator.py
tests/: conftest.py  test_cli.py  test_commands.py  test_connection.py  test_ddl.py  test_dml.py  test_dumpcli.py  test_formatter.py  test_functions.py  test_interactive.py  test_migrate.py  test_pgloader.py  test_pgloader_data.py  test_psql_commands.py  test_roundtrip.py  test_translator.py
